Add persist bug solve posting

--- a/SookDevLog/contents/050822_2/050822_2.md
+++ b/SookDevLog/contents/050822_2/050822_2.md
@@ -1,7 +1,7 @@
 ---
 date: "2022-05-08"
 title: "slug"
-categories: ["React", "GraphQl", "Typescript", "gatsby"]
+categories: ["React", "GraphQl", "Typescript", "Gatsby"]
 summary: "게시글 링크에 꼭 필요한 슬러그!"
 thumbnail: "./050822_2.png"
 ---
