Add redux-toolkit due to search list function

--- a/contents/050822/050822.md
+++ b/contents/050822/050822.md
@@ -1,7 +1,7 @@
 ---
 date: "2022-05-08"
 title: "다신스벅안와!"
-categories: ["Daily"]
+categories: ["daily"]
 summary: "인피니트스크롤+빌드"
 thumbnail: "./050822.png"
 ---
