--- a/contents/050822_1/050822_1.md
+++ b/contents/050822_1/050822_1.md
@@ -1,7 +1,7 @@
 ---
 date: "2022-05-08"
 title: "infiniteScroll using IntersectionObserver"
-categories: ["React", "GraphQl", "Typescript"]
+categories: ["react", "graphql", "typescript"]
 summary: "IntersectionObserver"
 thumbnail: "./050822_1.png"
 ---
