Add posting algorithm level2

--- a/contents/algorithm/이중우선순위큐.md
+++ b/contents/algorithm/이중우선순위큐.md
@@ -1,60 +1,46 @@
 ---
 date: "2022-10-12"
 title: "이중우선순위 큐"
-categories: ["algorithm"]
-summary: "프로그래머스 3단계"
+categories: ["algorithm", "javascript"]
+summary: "프로그래머스 3단계 - 힙(Heap)"
 thumbnail: "./programmers.png"
 ---
 
-## 이중우선순위 큐
+# 이중우선순위 큐
 
-### 🧩 문제
+## 🧩 문제
 
 이중 우선순위 큐는 다음 연산을 할 수 있는 자료구조를 말합니다.
 
-<table>
-  <thead>
-  <tr>
-    <th>명령어</th>
-    <th>수신 탑(높이)</th>
-  </tr>
-</thead>
-  <tbody>
-    <tr>
-      <td>I 숫자	</td>
-      <td>큐에 주어진 숫자를 삽입합니다.</td>
-    </tr>
-      <tr>
-      <td>D 1</td>
-      <td>큐에서 최댓값을 삭제합니다.</td>
-    </tr>
-      </tr>
-      <tr>
-      <td>D -1</td>
-      <td>
-        큐에서 최솟값을 삭제합니다.
-        </td>
-    </tr>
-  </tbody>
-</table>
+<br/>
 
+| **명령어** |                  수신 탑(높이) |
+| :--------: | -----------------------------: |
+|   I 숫자   | 큐에 주어진 숫자를 삽입합니다. |
+|    D 1     |    큐에서 최댓값을 삭제합니다. |
+|    D -1    |    큐에서 최솟값을 삭제합니다. |
+
+---
+
+<br/>
 이중 우선순위 큐가 할 연산 operations가 매개변수로 주어질 때, 모든 연산을 처리한 후 큐가 비어있으면 [0,0] 비어있지 않으면 [최댓값, 최솟값]을 return 하도록 solution 함수를 구현해주세요.
 
-<b>제한사항</b>
+### 제한사항
 
 - operations는 길이가 1 이상 1,000,000 이하인 문자열 배열입니다.
 - operations의 원소는 큐가 수행할 연산을 나타냅니다.
   - 원소는 “명령어 데이터” 형식으로 주어집니다.- 최댓값/최솟값을 삭제하는 연산에서 최댓값/최솟값이 둘 이상인 경우, 하나만 삭제합니다.
 - 빈 큐에 데이터를 삭제하라는 연산이 주어질 경우, 해당 연산은 무시합니다.
 
-<table>
-  <thead>
+<br/>
+<table style="border-radius:8px">
+  <thead  style="background:#EEEEEE">
   <tr>
     <th>operations</th>
     <th>return</th>
   </tr>
 </thead>
-<tbody>
+<tbody >
   <tr>
     <td>["I 16", "I -5643", "D -1", "D 1", "D 1", "I 123", "D -1"]	</td>
     <td>[0,0]</td>
@@ -67,7 +53,9 @@ thumbnail: "./programmers.png"
 
 </table>
 
-### 💬 해결
+---
+
+## 💬 해결
 
 ```js
 function solution(operations) {
